examples/test/testpolicy6309.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6309
  namespace: namespace261
spec:
  podSelector:
    matchLabels:
      key28: value45
      key0: value25
      key15: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value25
      podSelector:
        matchLabels:
          key28: value29
          key12: value9
